--- a/index.html
+++ b/index.html
@@ -712,63 +712,91 @@
         return num.toLocaleString('en-IE', { style: 'currency', currency: 'EUR' });
       }
 
-      const productsUrl = 'ProductJSON';
-      fetch(productsUrl, {
-        cache: 'no-store',
-        headers: {
-          'Cache-Control': 'no-cache, no-store, must-revalidate',
-          'Pragma': 'no-cache',
-          'Expires': '0'
+      function normalizeProducts(raw) {
+        if (Array.isArray(raw)) return raw;
+        if (raw && Array.isArray(raw.products)) return raw.products;
+        if (raw && Array.isArray(raw.items)) return raw.items;
+        return [];
+      }
+
+      function renderProducts(products) {
+        grid.innerHTML = '';
+
+        products
+          .filter(function(p) { return !p.status || p.status === 'published'; })
+          .forEach(function(p) {
+            const article = document.createElement('article');
+            article.className = 'product-card';
+
+            const imageUrl = p.image || (Array.isArray(p.gallery) && p.gallery[0]) || 'https://via.placeholder.com/160x160?text=Product';
+            const title = p.title || '';
+            const category = p.category || 'Promotion';
+            const brand = 'Jaella Crafts';
+            const priceText = formatPrice(p.price);
+            const description = p.description || '';
+
+            article.innerHTML = [
+              '<div class="product-image">',
+                '<img src="' + imageUrl + '" alt="' + title.replace(/"/g, '&quot;') + '">',
+              '</div>',
+              '<div class="product-body">',
+                '<span class="product-badge">' + category + '</span>',
+                '<h3 class="product-name">' + title + '</h3>',
+                '<span class="product-brand">' + brand + '</span>',
+                '<p class="product-price">' + priceText + ' <span></span></p>',
+                description ? '<p class="product-installments">' + description + '</p>' : '',
+              '</div>',
+              '<div class="product-footer">',
+                '<button class="btn-buy">Buy now</button>',
+              '</div>'
+            ].join('');
+
+            grid.appendChild(article);
+          });
+
+        if (!grid.children.length) {
+          grid.innerHTML = '<p style="grid-column:1/-1;text-align:center;padding:20px 0;">No products found.</p>';
         }
-      })
-        .then(function(res) {
-          if (!res.ok) throw new Error('HTTP ' + res.status);
-          return res.json();
-        })
-        .then(function(products) {
-          if (!Array.isArray(products)) products = [];
-          grid.innerHTML = '';
+      }
 
-          products
-            .filter(function(p) { return !p.status || p.status === 'published'; })
-            .forEach(function(p) {
-              const article = document.createElement('article');
-              article.className = 'product-card';
+      const urls = [
+        'ProductJSON',
+        'ProductJSON?t=' + Date.now(),
+        'products.json?t=' + Date.now(),
+        'products.json'
+      ];
 
-              const imageUrl = p.image || (Array.isArray(p.gallery) && p.gallery[0]) || 'https://via.placeholder.com/160x160?text=Product';
-              const title = p.title || '';
-              const category = p.category || 'Promotion';
-              const brand = 'Faella Crafts';
-              const priceText = formatPrice(p.price);
-              const description = p.description || '';
+      function tryLoad(index) {
+        if (index >= urls.length) {
+          grid.innerHTML = '<p style="grid-column:1/-1;text-align:center;padding:20px 0;">Could not load products.</p>';
+          return;
+        }
 
-              article.innerHTML = [
-                '<div class="product-image">',
-                  '<img src="' + imageUrl + '" alt="' + title.replace(/"/g, '&quot;') + '">',
-                '</div>',
-                '<div class="product-body">',
-                  '<span class="product-badge">' + category + '</span>',
-                  '<h3 class="product-name">' + title + '</h3>',
-                  '<span class="product-brand">' + brand + '</span>',
-                  '<p class="product-price">' + priceText + ' <span></span></p>',
-                  description ? '<p class="product-installments">' + description + '</p>' : '',
-                '</div>',
-                '<div class="product-footer">',
-                  '<button class="btn-buy">Buy now</button>',
-                '</div>'
-              ].join('');
+        const url = urls[index];
 
-              grid.appendChild(article);
-            });
-
-          if (!grid.children.length) {
-            grid.innerHTML = '<p style="grid-column:1/-1;text-align:center;padding:20px 0;">No products found.</p>';
+        fetch(url, {
+          cache: 'no-store',
+          headers: {
+            'Cache-Control': 'no-cache, no-store, must-revalidate',
+            'Pragma': 'no-cache',
+            'Expires': '0'
           }
         })
-        .catch(function(err) {
-          console.error('Error loading ProductJSON:', err);
-          grid.innerHTML = '<p style="grid-column:1/-1;text-align:center;padding:20px 0;">Could not load products from ProductJSON.</p>';
-        });
+          .then(function(res) {
+            if (!res.ok) throw new Error('HTTP ' + res.status);
+            return res.json();
+          })
+          .then(function(data) {
+            const products = normalizeProducts(data);
+            renderProducts(products);
+          })
+          .catch(function(err) {
+            console.error('Error loading products from', url, err);
+            tryLoad(index + 1);
+          });
+      }
+
+      tryLoad(0);
     })();
   </script>
 </body>
