--- a/index.html
+++ b/index.html
@@ -349,13 +349,15 @@
 
     .product-image {
       background: #fff;
-      padding: 12px 8px 8px;
+      padding: 0;
       text-align: center;
     }
 
     .product-image img {
-      max-width: 90px;
+      width: 100%;
+      max-width: 100%;
       height: auto;
+      display: block;
     }
 
     .product-body {
@@ -548,11 +550,12 @@
       }
 
       .product-image {
-        padding: 8px 4px 4px;
+        padding: 0;
       }
 
       .product-image img {
-        max-width: 70px;
+        width: 100%;
+        max-width: 100%;
       }
 
       .product-body {
