--- a/Checkout.html
+++ b/Checkout.html
@@ -278,7 +278,7 @@ footer{
 <script src="https://www.paypal.com/sdk/js?client-id=AfTde7kvXeDpijvvMVxUcfb7b-XIQgWMnQ8W2rcUd8PX5wyHAddc-Xf0_VG_wLUVl0dNw_9HXAzpo6dt&currency=EUR&intent=capture&commit=true&locale=en_IE&components=buttons,funding-eligibility&enable-funding=card"></script>
 <script>
 // ===== Keys used by the site =====
-const CART_KEYS_ORDER = ['vw_cart','hs_cart','cart','v_cart','cartItems','cart_items','cartData'];
+const CART_KEYS_ORDER = ['cartItems'];
 const FULFILMENT_KEY = 'fulfilment_mode'; // 'delivery' | 'pickup'
 
 function readCartFromQuery(){
