--- a/index.html
+++ b/index.html
@@ -1137,7 +1137,7 @@
                 description ? '<p class="product-installments">' + description + '</p>' : '',
               '</div>',
               '<div class="product-footer">',
-                '<button class="btn-buy">ADD TO CAR</button>',
+                '<button class="btn-buy">ADD TO CART</button>',
               '</div>'
             ].join('');
 
