--- a/bears.html
+++ b/bears.html
@@ -929,7 +929,6 @@
   <script>
     (function() {
       const grid = document.getElementById('productsGrid');
-      if (!grid) return;
 
       var CATEGORY_FILTER = 'Bears';
 
@@ -1237,5 +1236,64 @@ const urls = [
       tryLoad(0);
     })();
   </script>
+
+  <script>
+    (function() {
+      var heroMap = {
+        label: '.hero-label',
+        title: '.hero-title',
+        sub: '.hero-sub',
+        badge: '.hero-badge',
+        cardTitle: '.hero-card-title',
+        cardSub: '.hero-card-sub',
+        cardDate: '.hero-card-date'
+      };
+
+      function applyHero(data) {
+        if (!data) return;
+        try {
+          Object.keys(heroMap).forEach(function(key) {
+            var selector = heroMap[key];
+            var el = document.querySelector(selector);
+            if (el && data[key]) {
+              el.textContent = data[key];
+            }
+          });
+        } catch (e) {
+          console && console.warn && console.warn('Error applying hero config', e);
+        }
+      }
+
+      function loadHero() {
+        fetch('hero.json?t=' + Date.now(), {
+          cache: 'no-store',
+          headers: {
+            'Cache-Control': 'no-cache, no-store, must-revalidate',
+            'Pragma': 'no-cache',
+            'Expires': '0'
+          }
+        })
+          .then(function(res) {
+            if (!res.ok) throw new Error('HTTP ' + res.status);
+            return res.json();
+          })
+          .then(function(data) {
+            applyHero(data);
+          })
+          .catch(function(err) {
+            if (window.console && console.warn) {
+              console.warn('Hero config not loaded:', err);
+            }
+          });
+      }
+
+      if (document.readyState === 'loading') {
+        document.addEventListener('DOMContentLoaded', loadHero);
+      } else {
+        loadHero();
+      }
+    })();
+  </script>
+
 </body>
 </html>
